# OpenGLBootstrap

./: CMakeLibs.cmake  CMakeLists.txt  README.MD  incrementBuild.bat
include/: library.h
include/gl/: OpenGLBootstrap.h  ResourceManager.h  Shader.h  Texture.h
include/glyph/: GlyphRenderer.h
include/texture/: TextureAtlas.h
include/ui/: Actor.h  Group.h  Stage.h
include/ui/components/: Button.h
include/util/: StringUtils.h  lodepng.h
src/: library.cpp
src/gl/: OpenGLBootstrap.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp
src/glyph/: GlyphRenderer.cpp
src/texture/: TextureAtlas.cpp
src/ui/: Actor.cpp  Button.cpp  Group.cpp  Stage.cpp
src/ui/components/: Button.cpp
src/util/: StringUtils.cpp  lodepng.cpp
